WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234244
[css-flexbox] Absolutely positioned children should be aligned using the margin box
https://bugs.webkit.org/show_bug.cgi?id=234244
Summary
[css-flexbox] Absolutely positioned children should be aligned using the marg...
Sergio Villar Senin
Reported
2021-12-13 08:49:21 PST
[css-flexbox] Absolutely positioned children should be aligned using the margin box
Attachments
Patch
(3.38 KB, patch)
2021-12-13 08:54 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Patch
(4.10 KB, patch)
2021-12-14 01:59 PST
,
Sergio Villar Senin
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2021-12-13 08:54:04 PST
Created
attachment 447009
[details]
Patch
Vitaly Dyachkov
Comment 2
2021-12-13 09:45:04 PST
Comment on
attachment 447009
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447009&action=review
> Source/WebCore/rendering/RenderFlexibleBox.cpp:1687 > + auto availableSpace = availableAlignmentSpaceForChild(crossAxisContentExtent(), child);
availableAlignmentSpaceForChild() method contains an assertion: ASSERT(!child.isOutOfFlowPositioned()); Won't it fail in case of a positioned child?
Sergio Villar Senin
Comment 3
2021-12-13 15:06:05 PST
(In reply to Vitaly Dyachkov from
comment #2
)
> Comment on
attachment 447009
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=447009&action=review
> > > Source/WebCore/rendering/RenderFlexibleBox.cpp:1687 > > + auto availableSpace = availableAlignmentSpaceForChild(crossAxisContentExtent(), child); > > availableAlignmentSpaceForChild() method contains an assertion: > ASSERT(!child.isOutOfFlowPositioned()); Won't it fail in case of a > positioned child?
Right, that's why EWS are complaining. I'll review tomorrow why that assert was added, looks like it does not make much sense.
Sergio Villar Senin
Comment 4
2021-12-14 01:59:48 PST
Created
attachment 447117
[details]
Patch
Vitaly Dyachkov
Comment 5
2021-12-14 09:21:04 PST
Is there anything I can do to speed up the review process?
Sergio Villar Senin
Comment 6
2021-12-15 01:04:04 PST
Committed
r287064
(
245259@trunk
): <
https://commits.webkit.org/245259@trunk
>
Radar WebKit Bug Importer
Comment 7
2021-12-15 01:05:21 PST
<
rdar://problem/86511194
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug